# MLops_project

./: .flake8  .gitignore  .pre-commit-config.yaml  Data Exploration Analysis.ipynb  Dockerfile  Init Notebook.ipynb  ML Flow.ipynb  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-tests.yml
deployment/: Pipfile  lambda_function.py  model.py
deployment/integration-test/: docker-compose.yaml  event.json  run.sh  test_docker.py  test_kinesis.py
deployment/integration-test/model/: MLmodel  conda.yaml  model.pkl  requirements.txt
deployment/tests/: data.b64  model_test.py
deployment/webservice/: model.pkl  predict.py  test.py
deployment/webservice-mlflow/: Dockerfile  Pipfile  predict.py
infrastructure/: .terraform.lock.hcl  main.tf  variables.tf
infrastructure/modules/ec2-server/: iam.tf  main.tf  variables.tf
infrastructure/modules/ecr/: main.tf  variables.tf
infrastructure/modules/kinesis/: variables.tf
infrastructure/scripts/: ec2-server.sh
infrastructure/vars/: stg.tfvars
integration-test/: docker-compose.yaml  run.sh  test_mllfow.py
mlflow-orchestration/: docker-compose.yaml  setup.sh
mlflow-orchestration/mage_docker/: Dockerfile
mlflow-orchestration/spotify-predict/: metadata.yaml
nbs/: Data Exploration Analysis.ipynb
orchestration/: docker-compose.yaml  example_env.txt  setup.sh
orchestration/mage_docker/: requirements.txt
project_code/: project_dataloader.py  project_transformer.py
src/: test_mlflow.py
tests/: test_dataloader.py  test_datatransformer.py
(+414 files in other folders)
