[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = "Project for MLops Zoomcamp"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "^2.14.2"
pandas = "^2.2.2"
xgboost = "^2.1.0"
flake8 = "^7.1.0"
black = "^24.4.2"
pre-commit = "^3.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
